# BussinFlushin

./: .gitmodules  README.md  flake.nix
arduino_repository/: .gitignore  Makefile
arduino_repository/beacon_wifi_mqtt/: arduino_secrets_example.h  beacon_wifi_mqtt.ino
arduino_repository/grove_proximity/: grove_proximity.ino
arduino_repository/grove_ultrasonic/: grove_ultrasonic.ino
arduino_repository/python_simulation/: EnumTypes.py  SerialDataGenerator.py  StateSimulator.py  bussin-flushin-simulator.py  read-simulated-serial.py  run-simulator.sh
backend_repository/: app.js  beaconScanner.js  package-lock.json  package.json  request.js  test.html  toiletStateMachine.js
backend_repository/prod/: package.json
dashboard_repository/: package-lock.json  package.json
dashboard_repository/app/: page.js
dashboard_repository/app/Components/: dashboard.jsx  leftColumn.jsx  midColumn.jsx  rightColumn.jsx
mosquitto/mosquitto/: passwd
mqtt/mosquitto/: mosquitto.conf
rules.d/: 00-arduino.rules
telegrambot_repository/: README.md  pyproject.toml
telegrambot_repository/src/: lambda.py
