[tool.poetry]
name = "src"
version = "1.0.0"
description = "Telegram Bot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.36"

[tool.poetry.scripts]
build = "scripts.build:start"
cert = "scripts.get_ca_cert:start"
zip = "scripts.zip:start"
dist = "scripts.dist:start"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"